# md5sum-rs

./: Cargo.toml  README.md
src/: main.rs
